--- a/style/style.css
+++ b/style/style.css
@@ -178,7 +178,7 @@ h2 {
     width: 100%;
     /* background-image:; */
         /* background-image:linear-gradient(rgba(121, 107, 107, 0.1),rgba(220, 213, 213, 0.1)),  url('/images/banner/img\ 2.jpg') no-repeat center; */
-        background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("/images/banner/nature-flower-flora-season.jpg");
+        background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("/images/banner/banner1.jpg");
     background-repeat: no-repeat;
 padding: 8rem;
     background-size: cover;
